<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background01"
    tools:context=".MainMenuActivity">

    <ImageView
        android:contentDescription="@string/circleimage1"
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="145dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button02" />

    <ImageView
        android:contentDescription="@string/circleimage2"
        android:id="@+id/imageView2"
        android:layout_width="133dp"
        android:layout_height="133dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/button03" />

    <Button
        android:id="@+id/mainButton"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:background="@drawable/button01"
        android:fontFamily="@font/loved_by_the_king"
        android:onClick="OnClick"
        android:text="@string/singme"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/helpbutton"
        android:fontFamily="@font/euphoria_script"
        android:text="?"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:onClick="helpClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/background"
        android:id="@+id/helpBackground"
        android:layout_width="285dp"
        android:layout_height="519dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:srcCompat="@drawable/popupbackground" />

    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/how_to_play"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/helpBackground"
        app:layout_constraintStart_toStartOf="@+id/helpBackground"
        app:layout_constraintTop_toTopOf="@+id/helpBackground" />


    <TextView
        android:id="@+id/paragraph1"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/para_01"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/helpBackground"
        app:layout_constraintRight_toRightOf="@+id/helpBackground"
        app:layout_constraintTop_toBottomOf="@+id/helpTitle" />

    <TextView
        android:id="@+id/paragraph2"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/para_02"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/helpBackground"
        app:layout_constraintRight_toRightOf="@+id/helpBackground"
        app:layout_constraintTop_toBottomOf="@+id/paragraph1" />

    <TextView
        android:id="@+id/paragraph3"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/para_03"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/helpBackground"
        app:layout_constraintRight_toRightOf="@+id/helpBackground"
        app:layout_constraintTop_toBottomOf="@+id/paragraph2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelineVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>